[package]
name = "a500-mini-toolset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.3.0"
num = "0.4.0"
num-bigint = "0.4.3"
hex = "0.4.3"
aes = "0.8.2"
block-modes = "0.8.1" # yeah I know it's deprecated ...
cbc = "0.1.2" # I know, I know
generic-array = "0.14.6"
hmac = "0.12.1"
sha2 = "0.10.6"
